# ChangeLog for app-misc/tdl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/tdl/ChangeLog,v 1.35 2012/09/30 18:24:33 armin76 Exp $

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> tdl-1.5.2-r1.ebuild,
  tdl-1.5.2-r2.ebuild:
  Drop alpha keywords

  28 Jun 2012; Brent Baude <ranger@gentoo.org> tdl-1.5.2-r2.ebuild:
  Marking tdl-1.5.2-r2 ppc for bug 418617

  11 Jun 2012; Agostino Sarubbo <ago@gentoo.org> tdl-1.5.2-r2.ebuild:
  Stable for amd64, wrt bug #418617

  09 Jun 2012; Jeff Horelick <jdhore@gentoo.org> tdl-1.5.2-r2.ebuild:
  marked x86 per bug 418617

*tdl-1.5.2-r2 (21 Feb 2012)

  21 Feb 2012; Justin Lecher <jlec@gentoo.org> +tdl-1.5.2-r2.ebuild,
  +files/tdl-1.5.2-list.c.patch, +files/tdl-1.5.2-main.c.patch,
  +files/tdl-1.5.2-man.patch:
  Add paches from debian, fixes timestamp calculation, #350614

  13 Jun 2011; Justin Lecher <jlec@gentoo.org> tdl-1.5.2-r1.ebuild,
  -files/screenshot.png:
  No binaryfiles in VCS please, #370881

  05 Jan 2011; Justin Lecher <jlec@gentoo.org> -tdl-1.5.2.ebuild:
  Some Clean up, removed old

  05 Dec 2010; Raúl Porcel <armin76@gentoo.org> tdl-1.5.2-r1.ebuild:
  alpha stable wrt #342139

  24 Oct 2010; Brent Baude <ranger@gentoo.org> tdl-1.5.2-r1.ebuild:
  stable ppc, bug 342139

  23 Oct 2010; Dane Smith <c1pher@gentoo.org> tdl-1.5.2-r1.ebuild:
  Stable x86 wrt bug 342139.

  22 Oct 2010; Justin Lecher <jlec@gentoo.org> tdl-1.5.2.ebuild,
  tdl-1.5.2-r1.ebuild:
  QA, fixes #342219

  22 Oct 2010; Markos Chandras <hwoarang@gentoo.org> tdl-1.5.2-r1.ebuild:
  Stable on amd64 wrt bug #342139

*tdl-1.5.2-r1 (18 Sep 2010)

  18 Sep 2010; Justin Lecher <jlec@gentoo.org> +files/1.5.2-ldflags.patch,
  +tdl-1.5.2-r1.ebuild:
  Respecting LDFLAGS, 337612

  13 Apr 2009; Jeremy Olexa <darkside@gentoo.org> -tdl-1.4.1.ebuild,
  tdl-1.5.2.ebuild:
  QA: respect CC, bug 243676. Remove old.

  03 Sep 2008; Christian Faulhammer <opfer@gentoo.org> tdl-1.4.1.ebuild,