@@ -7,14 +7,14 @@ AUX tdl-1.5.2-main.c.patch 4967 SHA256 5f34ae0e08ce4fce8af4715bb87d69d5e52cddf49
 AUX tdl-1.5.2-man.patch 11004 SHA256 bcb1f313dc7976f4a539b6a04c649e6b507f3a7437f43212bdcd0e3519b01a23 SHA512 fef2ca8f8c6db0b61037ad10269fe185f2d5cb1ffdee0560acdba61be87d71d2195471412d26a5c6e7766332d9a13bf95774b0374de14b6df7b4a97ad27e8d32 WHIRLPOOL e8117d3202b3f7992b990eace9dc767c67aaa8f55f0295c942fd0039a2beeb43bcee4f937923c5c87fa3fb369cca21dd47d8bb06fd89ad713902675816ed481b
 DIST tdl-1.5.2.tar.gz 66057 SHA256 b43ed73bbdc77527c164b7e99f28c5fe2b7626d30adace78d8c40cca74f7fbfb SHA512 8c07a5b6a5434bb567a2d68b6e0215bbfa7be3f7176ae1042652ac18684289117230af25d8d161fcf1ba27d9b740fd3fcd43c3213467b533de64390686481fe0 WHIRLPOOL e1e136bc01716e41b56df16caa6bc9bfa7742abf0b50a376a9aea9ddec61931d064eef2a1d59a3b1fa3eacf49ffd9164fd95d70af2811d6fb8fe1447c9fecde5
 DIST tdl-screenshot.png.tar 20480 SHA256 9deb053eebc426cd3fd694cfa953043faf7da86ff65c498a135d01bafe5d68c4 SHA512 caca9793626b320ded4c7f16425b98e4bfde9ab0ca3c1bea60ecc8aaa8db080ab6fc3c474aef4d56e394b6415ec1162671329912aa22452dbd5dc72b50c7c8f6 WHIRLPOOL e2dc07ecf38f9a1945299c919f797d946ba99c32274b132b3deb6d0889a474138bff2ed485a901188ec67917523fa9818e2692b21ba12e4a16ded6c5519b4c41
-EBUILD tdl-1.5.2-r1.ebuild 1587 SHA256 1d7485a90eeea898dfb041ca9b9d4f586d475acb64a5203d11122237c584a3d4 SHA512 29ed5fa2f3eeb45ba98197620f106aee94de86d1c5bb6c2afcf5649dfd3d7794f56f3b11e471a7e04ac0b3823058ba97dd5e966eba8efea278ee50ea17a604f2 WHIRLPOOL 23207ce0458505868db669ee04790b2034f40a67998e833d98f96fdb80402eda8934498d8f72eebc2ab9cc6e8f52f105f99659c464fbc55c24dc3d57b24f0740
 EBUILD tdl-1.5.2-r2.ebuild 1620 SHA256 a10ef65a5c14ffe94ea509c08ff19931934bc150c9b06bb893f2308a33c1012a SHA512 c2e1a00a1fdfd103f04552639e2dec646008df91ba11cb40fa69d4b60c6137ac27661eb35ad743ae5c0993039f6ec331d73455ad4abf66014a431343c4630cf0 WHIRLPOOL 914f848370b928dae9d3c0a6df8df0af358eb04ae298422ada1f2e54358a32c5f7a3f08270fe72eab93dbac1d3f96082d5551945571ec02f119cb8b4610b02ac
-MISC ChangeLog 4154 SHA256 eee7b0675109bd0a8e86381e5f446df8128725210b2b43c00dc4f2898a9535f2 SHA512 3edc286fe6b6b5db821fc908640384508ab086cd9135e1ef5fcd59b3b8bd8400f7b67cbd85762dbdbcd78035756e01669669a6a1d68a4c53a9804e052a78479f WHIRLPOOL 826aa61e503a4680c73a8f6d02d7d02ea643442c7c19a536821cdf4d5674113c557110ff7c9e3f8762c383a6b580c345a81ad036261a9594026977e7b285eafc
+MISC ChangeLog 4232 SHA256 832767ec98146cad196c96a0b2de4eb8502a75aa655915ddd0c2db2f8781ee58 SHA512 f147799e7f80b16e4d0b7705b513403290ea7c2ff5ba26ad84604cfc0c28b6a1ad819306df21255f31444b31ec6c8cd7d9823d565de2b3923b3abed130acc9ed WHIRLPOOL 9d566746d2c514e2e0d7520a9c36c9aeadc7359e6d6e2f9b9a76d2e84a5392347de04cde64926cf122e60a6845e805666dbe11bdfd00a7df49b6998a18631082
 MISC metadata.xml 407 SHA256 472686160aab68cf327ca9662806d845473072d8a4e4c79a2dcf1fb955ec4d1d SHA512 266ff19ae824580ceeadfa255816d7306cdc4b269f49a522cca48b1dd879aac5de802ab1f996ed3c2389f7f43d0adbd0667be334d680b64a33f464edfbba1000 WHIRLPOOL fa899d9367dc567441201e82ec801277d017adf12cc7e762db4ec8ee27977a04c493de21160850697239ff10aa6f2e0aec44fa54f95b01f9ebee62a4a90efd3c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEAREIAAYFAlBojmcACgkQuQc30/atMkABsACfVEUYmDIMXixZuBMcAN7LNJcF
-YEIAniKzFU+vUryRhm6HoPm6ZZo42fDT
-=Ca6L
+iEYEAREIAAYFAlBwS4YACgkQgAnW8HDreRb9QACeLkW3EjOKotl4kZzN+dhAzXWh
+GEUAoL4mvxvKDMkMvbuqDXiNKSNOH1eZ
+=piZk
 -----END PGP SIGNATURE-----
