@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/tdl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/tdl/ChangeLog,v 1.35 2012/09/30 18:24:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/tdl/ChangeLog,v 1.36 2012/10/06 15:17:25 jlec Exp $
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> -tdl-1.5.2-r1.ebuild:
+  Drop old
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> tdl-1.5.2-r1.ebuild,
   tdl-1.5.2-r2.ebuild:
